--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -1142,7 +1142,7 @@ body {
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     z-index: 9999;
